<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_contact">Add Contact</string>
    <string name="sort_by">Sort by</string>
    <string name="first_name_hint">First Name</string>
    <string name="mobile">Mobile Ph</string>
    <string name="mobile_number_hint">mobile number</string>
    <string name="home_number_hint">home number</string>
    <string name="home">Home Ph  </string>
    <string name="email">Email    </string>
    <string name="email_address_hint">email address</string>
    <string name="last_name_hint">Last Name</string>
    <string name="work">Work Ph</string>
    <string name="work_number_hint">work number</string>
    <string name="home_address_text">Home Address</string>
    <string name="home_address_hint">home address</string>
    <string name="save_contact">Save</string>
    <string name="back_cancel">Cancel</string>
    <string name="already_exists">A contact with the same first and last name already exists, please change the name and try again</string>
    <string name="ok">OK</string>
    <string name="already_exists_title">The Contact Already Exists</string>
    <string name="contact_view_title">View Contact</string>
    <string name="image_description_text">Contact\'s Image</string>
    <string name="sort_type">Sort Contacts by</string>
    <string-array name="sort_by_array">
        <item >First Name</item>
        <item >Last Name</item>
    </string-array>
    <string name="pick_image">Get image from:</string>
    <string-array name="pick_image_array">
        <item >Gallery</item>
        <item >Camera</item>
    </string-array>
    <string name="contact_edit_title">Edit Contact</string>
    <string name="mobile_call_description_text">Call Mobile</string>
    <string name="mobile_text_description_text">Text Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="contact_image">Contact Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="some_info">Some Information</string>
    
    
</resources>