<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <ImageButton
        android:id="@+id/contact_image"
        android:layout_width="124dip"
        android:layout_height="124dip"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:layout_marginLeft="4dip"
        android:layout_marginTop="8dip"
        android:contentDescription="Contact Image"
        android:src="@drawable/ic_launcher" />
    
    <TextView
    	android:id="@+id/contact_last_name"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/contact_image"
    	android:layout_alignBottom="@id/contact_image"
    	android:layout_marginBottom="24dip"
    	android:layout_marginRight="6dip"
    	android:text="@string/first_name_hint" />
    
    <TextView
    	android:id="@+id/contact_first_name"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_above="@id/contact_last_name"
    	android:layout_toRightOf="@id/contact_image"
    	android:layout_marginBottom="4dip"
    	android:layout_marginRight="6dip"
    	android:text="@string/last_name_hint" />

	<LinearLayout
	    android:id="@+id/one"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/contact_image"
	    android:orientation="horizontal" >

    <TextView 
        android:id="@+id/mobile_number"
        android:text="@string/mobile"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_marginLeft="7dip"
    	android:layout_height="wrap_content"/>
    	
    
    <TextView
        android:id="@+id/contact_mobile_number"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginRight="6dip"
    	android:text="@string/mobile_number_hint" />
    	
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/two"
	    android:layout_marginTop="7dip"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/one"
	    android:orientation="horizontal" >

    <TextView 
        android:id="@+id/Home_number"
        android:text="@string/home"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_marginLeft="7dip"
    	android:layout_height="wrap_content"/>
    	
    
    <TextView
        android:id="@+id/contact_home_number"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginRight="6dip"
    	android:text="@string/home_number_hint"/>
    	
    </LinearLayout>
    
		<LinearLayout
	    android:id="@+id/three"
	    android:layout_marginTop="7dip"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/two"
	    android:orientation="horizontal" >

    <TextView 
        android:id="@+id/work_number"
        android:text="@string/work"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_marginLeft="7dip"
    	android:layout_height="wrap_content"/>
    	
    
    <TextView
        android:id="@+id/contact_work_number"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginRight="6dip"
    	android:text="@string/work_number_hint" />
    	
    </LinearLayout>
    
		<LinearLayout
	    android:id="@+id/four"
	    android:layout_marginTop="7dip"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/three"
	    android:orientation="horizontal" >

    <TextView 
        android:id="@+id/email_address"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_marginLeft="7dip"
    	android:layout_height="wrap_content"/>
    	
    
    <TextView
        android:id="@+id/contact_email_address"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginRight="6dip"
    	android:text="@string/email_address_hint" />
    	
    </LinearLayout>
    		<LinearLayout
	    android:id="@+id/five"
	    android:layout_marginTop="7dip"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/four"
	    android:orientation="horizontal" >

    <TextView 
        android:id="@+id/home_address"
        android:text="@string/home_address_text"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_marginLeft="7dip"
    	android:layout_height="wrap_content"/>
    	
    
    <TextView
        android:id="@+id/contact_home_address"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginRight="6dip"
    	android:text="@string/home_address_hint" />
    	
    </LinearLayout>

</RelativeLayout>
