<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/contact_image"
        android:layout_width="124dip"
        android:layout_height="124dip"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="8dip"
        android:contentDescription="@string/image_description_text"
        android:src="@drawable/ic_launcher" />
    
    <TextView
    	android:id="@+id/contact_last_name"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/contact_image"
    	android:layout_alignBottom="@id/contact_image"
    	android:layout_marginBottom="24dip"
    	android:layout_marginRight="6dip"
    	android:textSize="22sp"
    	android:text="@string/first_name_hint" />
    
    <TextView
    	android:id="@+id/contact_first_name"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_above="@id/contact_last_name"
    	android:layout_toRightOf="@id/contact_image"
    	android:layout_marginBottom="4dip"
    	android:textSize="22sp"
    	android:layout_marginRight="6dip"
    	android:text="@string/last_name_hint" />

    
    
    <RelativeLayout
	    android:id="@+id/uno"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/contact_image"
	    android:layout_marginLeft="16dip"
	    android:layout_marginRight="16dip"
	    android:layout_marginTop="7dip"
	    android:orientation="horizontal" >
	    
        
        <TextView 
        android:id="@+id/mobile_number"
        android:text="@string/mobile"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_width="100dip"
    	android:layout_height="wrap_content"/>
	        
	     <TextView
	        android:id="@+id/contact_mobile_number"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_centerVertical="true"
	    	android:textSize="20sp"
	    	android:layout_toRightOf="@id/mobile_number"
	    	android:text="@string/mobile_number_hint" />
	     
	     
	        
	            
	             <ImageButton
	       android:id="@+id/call_mobile_image"
	       android:layout_width="30dp"
	       android:layout_height="30dip"
           android:clickable="true"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
	       android:contentDescription="@string/mobile_call_description_text"
	       android:background="@drawable/device_access_call" />
	             
	             <ImageButton
	       android:id="@+id/text_mobile_image"
	       android:layout_width="30dp"
	       android:layout_height="30dip"
	       android:layout_marginRight="6dp"
           android:layout_centerVertical="true"
           android:layout_toLeftOf="@id/call_mobile_image"
           android:clickable="true"
	       android:contentDescription="@string/mobile_text_description_text"
	       android:background="@drawable/content_message" />
	             </RelativeLayout>
	             
    
    <RelativeLayout
	    android:id="@+id/dos"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/uno"
	    android:layout_marginLeft="16dip"
	    android:layout_marginRight="16dip"
	    android:layout_marginTop="7dip"
	    android:orientation="horizontal" >
	    
        
        <TextView 
        android:id="@+id/Home_number"
        android:text="@string/home"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_width="100dip"
    	android:layout_height="wrap_content"/>
	        
	     <TextView
	        android:id="@+id/contact_home_number"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_centerVertical="true"
	    	android:textSize="20sp"
	    	android:layout_toRightOf="@id/Home_number"
	    	android:text="@string/home_number_hint" />
	            
	             <ImageButton
	       android:id="@+id/call_home_image"
	       android:layout_width="30dp"
	       android:layout_height="30dip"
           android:clickable="true"
           android:layout_alignParentRight="true"
	       android:contentDescription="@string/mobile_call_description_text"
	       android:background="@drawable/device_access_call" />
	             </RelativeLayout>
	             
    <RelativeLayout
	    android:id="@+id/tres"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/dos"
	    android:layout_marginLeft="16dip"
	    android:layout_marginRight="16dip"
	    android:layout_marginTop="7dip"
	    android:orientation="horizontal" >
	    
        
        <TextView 
        android:id="@+id/work_number"
        android:text="@string/work"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_width="100dip"
    	android:layout_height="wrap_content"/>
	        
	     <TextView
	        android:id="@+id/contact_work_number"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_centerVertical="true"
	    	android:textSize="20sp"
	    	android:layout_toRightOf="@id/work_number"
	    	android:text="@string/work_number_hint" />
	            
	             <ImageButton
	       android:id="@+id/call_work_image"
	       android:layout_width="30dp"
	       android:layout_height="30dip"
           android:clickable="true"
           android:layout_alignParentRight="true"
	       android:contentDescription="@string/mobile_call_description_text"
	       android:background="@drawable/device_access_call" />
	             </RelativeLayout>
	             
        <RelativeLayout
	    android:id="@+id/quatro"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/tres"
	    android:layout_marginLeft="16dip"
	    android:layout_marginRight="16dip"
	    android:layout_marginTop="7dip"
	    android:orientation="horizontal" >
	    
        
        <TextView 
        android:id="@+id/email_address"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_width="100dip"
    	android:layout_height="wrap_content"/>
	        
	     <TextView
	        android:id="@+id/contact_email_address"
	        android:layout_width="200dip"
	    	android:layout_height="wrap_content"
	    	android:layout_centerVertical="true"
	    	android:singleLine="True"
	    	android:textSize="20sp"
	    	android:layout_toRightOf="@id/email_address"
	    	android:text="@string/email_address_hint" />
	            
	             <ImageButton
	       android:id="@+id/email_image"
	       android:layout_width="30dp"
	       android:layout_height="30dip"
           android:clickable="true"
           android:layout_alignParentRight="true"
	       android:contentDescription="@string/mobile_call_description_text"
	       android:background="@drawable/content_email" />
	             </RelativeLayout>
	             
                <RelativeLayout
	    android:id="@+id/cinco"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/quatro"
	    android:layout_marginLeft="16dip"
	    android:layout_marginRight="16dip"
	    android:layout_marginTop="7dip"
	    android:orientation="horizontal" >
	    
        
        <TextView 
        android:id="@+id/date_of_birth"
        android:text="@string/date_of_birth"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_width="100dip"
    	android:layout_height="wrap_content"/>
	        
	     <TextView
	        android:id="@+id/contact_date_of_birth"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_centerVertical="true"
	    	android:textSize="20sp"
	    	android:layout_toRightOf="@id/date_of_birth"
	    	android:text="@string/date_of_birth_hint" />
	     </RelativeLayout>
	     
	                     <RelativeLayout
	    android:id="@+id/seis"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/cinco"
	    android:layout_marginLeft="16dip"
	    android:layout_marginRight="16dip"
	    android:layout_marginTop="7dip"
	    android:orientation="horizontal" >
	    
        
        <TextView 
        android:id="@+id/home_address"
        android:text="@string/home_address_text"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_width="100dip"
    	android:layout_height="wrap_content"/>
	        
	     <TextView
	        android:id="@+id/contact_home_address"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_centerVertical="true"
	    	android:textSize="20sp"
	    	android:layout_toRightOf="@id/home_address"
	    	android:text="@string/home_address_hint" />

</RelativeLayout>
</RelativeLayout>
